--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,8 @@ app.db
 app.db-shm
 AuthenticationSolution.sln.DotSettings.user
 app.db-wal
+.vscode/settings.json
+.idea/.idea.AuthenticationSolution/.idea/.gitignore
+.idea/.idea.AuthenticationSolution/.idea/encodings.xml
+.idea/.idea.AuthenticationSolution/.idea/indexLayout.xml
+.idea/.idea.AuthenticationSolution/.idea/vcs.xml
