--- a/AplicationTests/AplicationTests.csproj
+++ b/AplicationTests/AplicationTests.csproj
@@ -25,7 +25,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Application\Application.csproj" />
+      <ProjectReference Include="..\Server\Application\Application.csproj" />
     </ItemGroup>
 
 </Project>
